--- a/vidio.css
+++ b/vidio.css
@@ -11,7 +11,24 @@ header{
     justify-self: center;
     width: 100%;
 }
-
+footer{
+    background-color: rgb(15, 15, 28);
+    color: white;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+  line-height: 50px;
+  margin-top: 100px;
+  }
+  footer img{
+    width: 32px;
+    height: 30px;
+    border-radius:3px;
+    
+    background-blend-mode: color-burn;
+    
+    
+  }
 .vidioPlyer {
     margin-left: auto;
     margin-right: auto;
